--- a/europarlament/index.html
+++ b/europarlament/index.html
@@ -39,7 +39,7 @@ profiles:
             
             <h1 itemprop="headline" class="c-BasicPage__title" style="color: black; text-align: center;"> Podívejte se, jak pracují vaši europoslanci!  </h1>
 
-            <h4 itemprop="headline" style="color: black; text-align: center;"> Je naší odpovědností skládat vám účty. Na této stránce naleznete informace o našem programu v Evropském parlamentu, jakož i detaily o našem hospodaření až na úroveň faktur.  </h4>
+            <h4 itemprop="headline" style="color: black; text-align: center;"> Je naší odpovědností skládat vám účty. Na této stránce najdete informace o našem programu v Evropském parlamentu včetně detailů o našem hospodaření až na úroveň faktur.  </h4>
 
 
           </article>
